--- a/exercise.ipynb
+++ b/exercise.ipynb
@@ -888,7 +888,7 @@
     }
    ],
    "source": [
-    "#creating for loop to visulize\n",
+    "#creating for loop to visualization\n",
     "for group, subset in df2.groupby('group'):\n",
     "    plt.scatter(subset.x, subset.y, label= group, alpha=.7)\n",
     "plt.legend()"
@@ -1013,13 +1013,6 @@
     "- make sure you visualize interactions between <i>multiple</i> variables\n",
     "- be careful about assumptions around group proportions"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
