--- a/exercise.ipynb
+++ b/exercise.ipynb
@@ -888,7 +888,7 @@
     }
    ],
    "source": [
-    "#creating for loop to visualization\n",
+    "#creating for loop to be able to visualization\n",
     "for group, subset in df2.groupby('group'):\n",
     "    plt.scatter(subset.x, subset.y, label= group, alpha=.7)\n",
     "plt.legend()"
